:factory: make controller generate
